--- a/task_4/src/index.css
+++ b/task_4/src/index.css
@@ -14,7 +14,7 @@ body {
 }
 
 .container{
-  overflow-x: auto; /* Enable horizontal scrolling */
+/* Enable horizontal scrolling */
   white-space: nowrap;
   width:max-content;
 }
@@ -26,11 +26,13 @@ body {
 .add {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
-  gap: 10%;
+  justify-content: space-between;
+  gap: 2%;
   margin: 10px 0;
   max-width: 600px;
   width: 500px;
+  height: 30px;
+
 }
 
 input {
@@ -60,8 +62,37 @@ button {
   flex-shrink: 0;
 }
 
+#tasks{
+  max-height: 345px;
+  overflow-x: hidden; 
+  overflow-y: auto;
+  width: 100%;
+  scrollbar-width: thin;
+  scrollbar-color: #1c32c3 #f0f0f5;
+}
+
+#tasks::-webkit-scrollbar {
+  width: 5px;
+}
+
+#tasks::-webkit-scrollbar-track {
+  background-color: #f0f0f5;
+  width: 5px; /* Decreased width of the scrollbar track */
+}
+
+#tasks::-webkit-scrollbar-thumb {
+  background-color: #1c32c3;
+  width: 5px; /* Decreased width of the scrollbar thumb */
+}
+
+/* Remove the arrow in scrollbar */
+#tasks::-webkit-scrollbar-button {
+  display: none;
+}
+
+
 #task > button{
-  width:20%;
+  width:10%;
 }
 
 .delete {
